# ZZZ-ClientSimulator

./: Cargo.toml
assert/: client_secret_key.ec2b  password_key.pem
assert/rsakey_config/2/: client_public_key.pem  server_private_key.pem
assert/rsakey_config/3/: client_public_key.pem  server_private_key.pem
src/: main.rs
src/common/: hmac.rs  mod.rs  mt64.rs  rsa.rs  xor.rs
src/common/ec2b/: magic.rs  mhy_aes.rs  mod.rs
src/game/: mod.rs  packet.rs  session.rs
src/game/apis/: authentication.rs
src/game/protos/: mod.rs
src/game/protos/v1.0.0/: cmd_types.rs  mod.rs
src/game/protos/v1_0_0/: cmd_types.rs  mod.rs  proto.rs
src/http/: gate.rs  mod.rs  sdk.rs  util.rs
